# peacockdb

./: .gitignore  README.md  build.md  implementation.md
.github/actions/cpp-build/: action.yml
.github/workflows/: cpp-cpu.yml  pipeline.yml
cpp/: CMakeLists.txt
cpp/include/: peacock_gpu.h
cpp/src/: gpu_executor.cpp  plan_executor.cpp  plan_executor.h  plan_executor_internal.h
cpp/tests/cpu/: test_executor.cpp
cpp/tests/gpu/: test_plan_executor.cpp
flatbuffers/: gpu_plan.fbs
peacockdb-core/: Cargo.toml  build.rs
peacockdb-core/src/: cpu_executor.rs  gpu_executor.rs  gpu_rule.rs  lib.rs  plan_serializer.rs
peacockdb-core/tests/: test_cpu_executor.rs  test_gpu_executor.rs  test_gpu_executor_tpcds.rs  test_plan_serialiser.rs  test_queries.rs  test_query_plan.rs  test_query_plan_tpcds.rs
peacockdb-core/tests/canondata/: q1.txt  q11.txt  q18.txt  q19.txt  q20.txt  q3.txt  q4.txt  q6.txt  q8.txt
peacockdb-ffi/src/: lib.rs
peacockdb-ffi/tests/: test_ffi.rs
peacockdb/src/: main.rs
scripts/: build-test-shadgpu.sh  build-test.sh  build.sh  conda-install-cudf-2506.sh  conda-install-cudf.sh  create_verda_instance.sh  init.sh  init_fedora43.sh  list_verda_instances.sh  setup-glibc.sh
testdata/: .gitignore  clean_testdata.sh  generate_testdata.sh
testdata/canondata/: aggregate-groupby.txt  anti-join.txt  cross-join.txt  filter-project.txt  hash-join.txt  left-join.txt  mixed-join.txt  q10.txt  q12.txt  q13.txt  q14.txt  q16.txt  q17.txt  q2.txt  q21.txt  q22.txt  q5.txt  q7.txt  q9.txt  semi-join.txt
testdata/plans/: filter_agg.txt  group_join_sort.txt  join_sort.txt
testdata/plans-tpcds.sf1/: q1.cpu.txt  q1.txt  q10.cpu.txt  q10.txt  q11.cpu.txt  q11.txt  q12.cpu.txt  q12.txt  q13.cpu.txt  q13.txt  q14.cpu.txt  q14.txt  q15.cpu.txt  q15.txt  q16.cpu.txt  q16.txt  q17.cpu.txt  q17.txt  q18.cpu.txt  q18.txt  q19.cpu.txt  q19.txt  q2.cpu.txt  q2.txt  q20.cpu.txt  q20.txt  q21.cpu.txt  q21.txt  q22.cpu.txt  q22.txt  q23.cpu.txt  q23.txt  q24.cpu.txt  q24.txt  q25.cpu.txt  q25.txt  q26.cpu.txt  q26.txt  q28.cpu.txt  q28.txt  (+150 more)
testdata/plans.sf1/: aggregate-groupby.cpu.txt  aggregate-groupby.txt  anti-join.cpu.txt  anti-join.txt  cross-join.cpu.txt  cross-join.txt  filter-project.cpu.txt  filter-project.txt  hash-join.txt  left-join.cpu.txt  left-join.txt  mixed-join.cpu.txt  mixed-join.txt  nested-loop-join.cpu.txt  nested-loop-join.txt  q1.cpu.txt  q1.txt  q10.cpu.txt  q10.txt  q11.cpu.txt  q11.txt  q12.cpu.txt  q12.txt  q13.cpu.txt  q13.txt  q14.cpu.txt  q14.txt  q15.cpu.txt  q15.txt  q16.cpu.txt  q16.txt  q17.cpu.txt  q17.txt  q18.cpu.txt  q18.txt  q19.cpu.txt  q19.txt  q2.cpu.txt  q2.txt  q20.cpu.txt  (+23 more)
testdata/tpcds-queries/: NOTICE  q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q23.sql  q25.sql  q26.sql  q27.sql  q28.sql  q29.sql  q3.sql  q30.sql  q31.sql  q32.sql  q33.sql  q34.sql  q35.sql  q36.sql  q37.sql  q38.sql  q39.sql  q4.sql  q40.sql  q41.sql  q42.sql  q43.sql  q44.sql  q45.sql  (+59 more)
testdata/tpch-queries/: NOTICE  aggregate-groupby.sql  filter-project.sql  hash-join.sql  left-join.sql  mixed-join.sql  q10.sql  q11.sql  q12.sql  q15.sql  q16.sql  q17.sql  q18.sql  q20.sql  q22.sql  q3.sql  q4.sql  q5.sql  q7.sql  q8.sql  q9.sql  scan-limit.sql
testdata/tpch-queries-full/: q14.sql  q15.sql
testdata/tpch-queries_1/: anti-join.sql  cross-join.sql  mixed-join.sql  nested-loop-join.sql  q1.sql  q13.sql  q19.sql  q2.sql  q21.sql  q6.sql  semi-join.sql
testdata/tpch.minimal/: nation.parquet  region.parquet  supplier.parquet
