[package]
name = "peacockdb-core"
version = "0.1.0"
edition = "2024"

[features]
rust-only = ["peacockdb-ffi/rust-only"]

[build-dependencies]
flatc-fork = "0.6"

[dependencies]
arrow = "54.2.0"
datafusion = "45"
flatbuffers = "25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
peacockdb-ffi = { path = "../peacockdb-ffi" }

[dev-dependencies]
datafusion = "45"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# No [patch] section needed